07 Feb 2009 Prevent restart on special engines - Bernard van der Helm
04 Feb 2009 Ensure unaligned LM/STM/LMG/STMG work on aligned constrained hosts - Ivan Warren 
03 Feb 2009 Fix TPROT under SIE problem reported by 'pat' - Ivan Warren
23 Jan 2009 copyright notice - Bernard van der Helm
17 Jan 2009 Fix change recording on page crossing first op of MVC - Reported by Greg Price
08 Jan 2009 Cosmetic improvement to CPU type display on startup - Jay
            Maynard
07 Jan 2009 Remove --enable-universal-binary configure option; doesn't work
            on Leopard due to libtool compiler options - Jay Maynard
07 Jan 2009 Preliminary changes for 3.06 - Jay Maynard
07 Jan 2009 Added x86_64 assembler byteswap assists - Jay Maynard
07 Jan 2009 msghld command with clear option - Bernard van der Helm
07 Jan 2009 msghldsec command - Bernard van der Helm
02 Jan 2009 Integrated 3270 console fixes - Jan Jaeger
02 Jan 2009 DVD-RAM IPL and RAMSAVE support - Jan Jaeger
02 Jan 2009 Optional ECHO/NOECHO to Diag8cmd statement - Ivan Warren
31 Dec 2008 Integrated 3270 (SYSG) console - Roger Bowler
30 Dec 2008 Allow $(LPARNAME) in herclogo file - Roger Bowler
23 Dec 2008 Allow symbol substitution in OAT files - Roger Bowler
22 Dec 2008 Implement Compare And Swap And Store Facility 2 - Ivan Warren
21 Dec 2008 Diag 224 fix - Ivan Warren
21 Dec 2008 Various SERVC READ_xxx_INFO fixes for specialty engines - Ivan Warren
08 Dec 2008 Fix Issue with ESA Guest on z/Arch and >2GB Storage - Ivan Warren
06 Dec 2008 Enable STFLE in ESA/390 mode - Ivan Warren
04 Dec 2008 Add ability to configure group name in --enable-setuid-hercifc= - Roger Bowler
02 Dec 2008 Support for PANTITLE when console is an xterm window - Roger Bowler
24 Nov 2008 Add processor type IL for IFL on engines statement - Jan Jaeger
02 Nov 2008 Correction to dasdtab entries for 3375 and 3380 - Roger Bowler
01 Nov 2008 Fix tapedev gettapetype_bydata function for HET/AWS tapes that